# demo_django_minio_dramatiq

./: README.md  pyproject.toml
core/: config.py
core/abstractions/: singleton.py
core/database/: health_check_minio.py  minio.py
core/worker/: worker.py
dramatiq_worker/: broker.py  clear_msg.py  worker.py
file_handler/: serializers.py  utils.py  views.py
template_download_file/: settings.py
